unpackaged/main/default/objects/Client_Inquiry__c/Client_Inquiry__c.object-meta.xml
<CustomObject>
    <description>Customer service emails and calls received by ECCHO</description>
    <label>Client Inquiry</label>
    <nameField>
        <label>Client Inquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>