unpackaged/main/default/objects/Client_Inquiry__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Inquiries</relationshipLabel>
    <relationshipName>Client_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>