unpackaged/main/default/objects/Client_Inquiry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECCHO Billing</fullName>
            </value>
            <value>
                <fullName>ECCHO Contacts</fullName>
            </value>
            <value>
                <fullName>ECCHO Events</fullName>
            </value>
            <value>
                <fullName>ECCHO Membership</fullName>
            </value>
            <value>
                <fullName>ECCHO Online User Exp</fullName>
            </value>
            <value>
                <fullName>ECCHO Rules</fullName>
            </value>
            <value>
                <fullName>ECCHO Rules Book Request</fullName>
            </value>
            <value>
                <fullName>NCP Billing</fullName>
            </value>
            <value>
                <fullName>NCP Continuing Education</fullName>
            </value>
            <value>
                <fullName>NCP Events</fullName>
            </value>
            <value>
                <fullName>NCP Exam</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>