unpackaged/main/default/objects/Client_Inquiry__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Inquiries</relationshipLabel>
    <relationshipName>Client_Inquiries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>