unpackaged/main/default/objects/Client_Inquiry__c/fields/ECCHO__c.field-meta.xml
<CustomField>
    <fullName>ECCHO__c</fullName>
    <label>ECCHO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECCHO Billing</fullName>
            </value>
            <value>
                <fullName>ECCHO Contacts</fullName>
            </value>
            <value>
                <fullName>ECCHO Events</fullName>
            </value>
            <value>
                <fullName>ECCHO Membership</fullName>
            </value>
            <value>
                <fullName>ECCHO Online User Experience</fullName>
            </value>
            <value>
                <fullName>ECCHO Rules</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>