unpackaged/main/default/objects/Client_Inquiry__c/fields/NCP__c.field-meta.xml
<CustomField>
    <fullName>NCP__c</fullName>
    <label>NCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCP Billing</fullName>
            </value>
            <value>
                <fullName>NCP Continuing Education</fullName>
            </value>
            <value>
                <fullName>NCP Events</fullName>
            </value>
            <value>
                <fullName>NCP Exam</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>