unpackaged/main/default/objects/Client_Inquiry__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <label>Questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altered Items</fullName>
            </value>
            <value>
                <fullName>Duplicates</fullName>
            </value>
            <value>
                <fullName>ECIs</fullName>
            </value>
            <value>
                <fullName>Indorsement</fullName>
            </value>
            <value>
                <fullName>Late Returns</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
            <value>
                <fullName>Return Codes</fullName>
            </value>
            <value>
                <fullName>Rule 8</fullName>
            </value>
            <value>
                <fullName>Rule 9</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>