unpackaged/main/default/objects/Client_Inquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Inquiry_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>